stopgap:

--- a/src/styles/includeInAll/all/utilities.scss
+++ b/src/styles/includeInAll/all/utilities.scss
@@ -29,3 +29,11 @@ h1.mainHeading {
   background-repeat: repeat-y;
   background-position: right 4rem;
 }
+
+.miniCardSection {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 1rem 0 0 0;
+  padding: 0;
+}
