--- a/src/styles/projectsPage.scss
+++ b/src/styles/projectsPage.scss
@@ -30,10 +30,3 @@ $fav_border: 1px solid #d6d6d6;
     }
   }
 }
-.miniCardSection {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin: 1rem 0 0 0;
-  padding: 0;
-}
